fix: fix card button overflow

--- a/styles/components/main/card.css
+++ b/styles/components/main/card.css
@@ -32,7 +32,8 @@
 .card__button {
   opacity: 0;
   position: absolute;
-  width: 258px;
+  width: calc(100% - 62px);
+  max-width: 258px;
   bottom: 20px;
 
   transition: opacity 0.25s ease-in-out;
@@ -109,5 +110,8 @@
 
   .card__price-component_regular {
     font-size: 14px;
+  }
+  .card__button {
+    font-size: 10px;
   }
 }
